2008-03-05  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/FilterByName.py (run): 
	fixed a couple of missing translations; name counts were slightly off

2008-03-05  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py (make_requested_gramplet): 
	fixed bug in showing options with new gramplets

2008-03-05 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ReportBase/_CommandLineReport.py: print warning if show=option is 
	not a valid option. Addresses some of 0001891.

2008-03-05 Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/DateParserDisplayTest.py: allow to translate QuestionDialog 

2008-03-05  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/docgen/TextBufDoc.py: fixed translations of Quick View
	* src/plugins/References.py: fixed translations of ref types

2008-03-05  Łukasz Rymarczyk <yenidai(at)poczta(dot)onet(dot)pl>
	* src/plugins/rel_pl.py: 0001776: Relationship calculator, update Polish
	Rewritten for 3.x version

2008-03-04  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Simple/_SimpleTable.py: 
	added callback for click/doubleclick manual override for rows
	added numeric sorting
	* src/QuickReports.py: added run_quick_report_by_name_direct
	that allows one quick report to run another
	* src/plugins/DefaultGramplets.py: made stats gramplet show 
	details when drilling down with double-click
	* src/plugins/SameSurnames.py: allow running by string rather than 
	person object
	* src/DataViews/GrampletView.py: added Filter type of link; fixed
	bug in drag and drop from earlier option infrastructure
	* src/plugins/FilterByName.py: quick report that runs a filter by
	name

2008-03-04  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/docgen/HtmlDoc.py (HtmlDoc.page_break): 
	Fixed indentation issue

2008-03-04 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Bookmarks.py: 0001770: Bookmark Editor window and deleting entries 
	Set focus on bookmark right above the deleted bookmark